@@ -125,6 +125,7 @@ Changed: Changed text input to select for classic editor "Insert Download" popup
 Fixed: Reports start day to match start day in wordpress settings. ( [#1180](https://github.com/WPChill/download-monitor/issues/1180) )
 Added: Global bool variable to disable File Browser "DLM_DISABLE_FILE_BROWSER" ( [#1259](https://github.com/WPChill/download-monitor/issues/1259) )
 Fixed: Downloads from admin dashboard are no longer logged. ( [#1239](https://github.com/WPChill/download-monitor/issues/1239) )
+Added: do_actions hooks to the backwards compatibility methods ( [#1239](https://github.com/WPChill/download-monitor/issues/1239) )
 
 = 4.8.7 - 25.07.2023 =
 Fixed: Compatibility with Elementor PRO page transitions ( [#1299](https://github.com/WPChill/download-monitor/issues/1299) )
